# innovationhub-cli

./: .gitignore  LICENSE  README.md  index.js  package.json
templates/nest/: .env.example  Dockerfile  README.md  docker-compose.yml  jest.config.js  package.json  template.json  tsconfig.build.json  tsconfig.json  tsconfig.typeorm.json
templates/nest/addons/: addons.json
templates/nest/addons/.github/: labeler.yml
templates/nest/addons/.husky/: commit-msg
templates/nest/addons/cloudinary/: cloudinary.provider.ts  (+1 more)
templates/nest/src/: app.module.ts  data-source.ts  main.ts
templates/python/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  template.json
templates/python/addons/: addons.json
templates/python/addons/.github/: dependabot.yml  labeler.yml
templates/python/addons/.github/workflows/: check-branch.yml  ci.yml  pr-labeler.yml  release.yml  security-audit.yml  stale.yml
templates/python/addons/cloudinary/: service.py
templates/python/addons/pre-commit/: .pre-commit-config.yaml
templates/python/alembic/: env.py
templates/python/app/: main.py
templates/python/app/auth/: __init__.py  dependencies.py  models.py  router.py  schemas.py  service.py
templates/python/app/common/: __init__.py  base_model.py  base_repository.py  errors.py  pagination.py  schemas.py  utils.py
templates/python/app/core/: config.py  database.py
templates/python/app/user/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
utils/: git.js  template.js
(+53 files in other folders)
